[tool.poetry]
name = "nau-xsite-postparse"
version = "0.1.0"
description = "Parse all marketing-2021 sites for specific blocks"
authors = ["Quinton Jasper <quinton.jasper@nau.edu>"]
readme = "README.md"
packages = [{include = "nau_xsite_postparse"}]

[tool.poetry.scripts]
nau-xsite-postparse = "site_parse.main:start"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
