[tool.poetry]
name = "nau-xsite-postparse"
version = "1.0.2"
description = ""
authors = ["Quinton Jasper"]
readme = "README.md"
packages = [{include = "nau_xsite_postparse"}]

[tool.poetry.dependencies]
python = "3.11.*"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.13.0"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
